# log4cxxSamples

./: .gitignore  CMakeLists.txt  NuGetShortSocketServer.sln  README.md  ShortSocketServer.sln  log4cxx.windows.sln  log4cxxEPollSocketServer.sln  log4cxxNugetSocketClient.sln  log4cxxNugetSocketServer.sln  log4cxxPollSocketServer.sln  log4cxxSelectSocketServer.sln  log4cxxSocketAll.sln  log4cxxSocketClient.sln  log4cxxSocketServer.sln  nugetShortSocketClient.sln  nugetShortSocketServer.sln  shortSocketClient.sln
NugetShortSocketServer/: ShortSocketServer.filters  ShortSocketServer.vcxproj  ShortSocketServer.vcxproj.filters
ShortSocketServer/: ShortSocketServer.cpp  ShortSocketServer.vcxproj  ShortSocketServer.vcxproj.filters
common/: ObjectLoader.cpp  ObjectLoader.h  byteBufInputStream.cpp  byteBufInputStream.h  inputStreamDef.h  objectLoader.cpp  objectLoader.h  socketInputStream.cpp  socketInputStream.h  socketLoader.cpp  socketLoader.h
common/Loader/: ByteBufInputStream.cpp  ByteBufInputStream.h  InputStreamDef.h  ObjectLoader.cpp  ObjectLoader.h  SocketInputStream.cpp
common/Socket/: log4cxxClient.cpp  log4cxxClient.h  log4cxxSocket.h
epollSocketServer/: CMakeLists.txt  ObjectFactory.cpp  epollSocketServer.cpp
javaLogging/: log4jClient.java  log4jServer.java
log4cxxEpollSocketServer/: BuildConfig.h  CMakeLists.txt  log4cxxEpollSocketServer.conf  log4cxxEpollSocketServer.cpp  log4cxxEpollSocketServer.vcxproj  log4cxxEpollSocketServer.vcxproj.filters
log4cxxEpollSocketServer/cmake/: FindLog4cxx.cmake
log4cxxExt/: CMakeLists.txt  log4cxxExt.vcxproj  log4cxxExt.vcxproj.filters
log4cxxExt/Loader/: ByteBufInputStream.h  BytesObjectLoader.cpp  BytesObjectLoader.h  DefaultByteBufInputStream.cpp  DefaultByteBufInputStream.h  DefaultInputStreamDef.h  DefaultObjectLoader.cpp  DefaultObjectLoader.h  DefaultSocketInputStream.cpp  DefaultSocketInputStream.h  Exceptions.cpp  Exceptions.h  FileLoader.cpp  FileLoader.h  LoggingEventEx.cpp  LoggingEvnetEx.h  MsgpackObjectLoader.cpp  MsgpackObjectLoader.h  ObjectLoader.cpp  ObjectLoader.h  SocketInputStream.cpp  SocketInputStream.h
log4cxxExt/Socket/: log4cxxClient.cpp  log4cxxClient.h  log4cxxSocket.h
log4cxxNugetSocketClient/: log4cxxSocketClient.vcxproj  log4cxxSocketClient.vcxproj.filters
log4cxxNugetSocketServer/: log4cxxSocketServer.vcxproj  log4cxxSocketServer.vcxproj.filters
log4cxxPollSocketServer/: BuildConfig.h  CMakeLists.txt  log4cxxPollSocketServer.conf  log4cxxPollSocketServer.cpp  log4cxxPollSocketServer.vcxproj  log4cxxPollSocketServer.vcxproj.filters
log4cxxSample01/: LoggingEvent.cpp  LoggingEvent.h  ObjectFactory.cpp  ObjectFactory.h  Packet.cpp  Packet.h  log4cxx.conf  log4cxxObj.cpp  log4cxxObj.h  log4cxxSample01.cpp  log4cxxSample01.vcxproj  log4cxxSample01.vcxproj.filters
log4cxxSelectSocketServer/: BuildConfig.h  CMakeLists.txt  log4cxxSelectSocketServer.conf  log4cxxSelectSocketServer.cpp  log4cxxSelectSocketServer.vcxproj  log4cxxSelectSocketServer.vcxproj.filters
log4cxxSocketClient/: CMakeLists.txt  log4cxxDynamicSocketClient.sln  log4cxxDynamicSocketClient.vcxproj  log4cxxDynamicSocketClient.vcxproj.filters  log4cxxSocketClient.conf  log4cxxSocketClient.cpp  log4cxxSocketClient.vcxproj  log4cxxSocketClient.vcxproj.filters  log4cxxStaticSocketClient.sln  log4cxxStaticSocketClient.vcxproj
log4cxxSocketServer/: CMakeLists.txt  log4cxxDynamicSocketServer.sln  log4cxxDynamicSocketServer.vcxproj  log4cxxDynamicSocketServer.vcxproj.filters  log4cxxSocket.h  log4cxxSocketServer.conf  log4cxxSocketServer.cpp  log4cxxSocketServer.vcxproj  log4cxxSocketServer.vcxproj.filters  log4cxxStaticSocketServer.sln  log4cxxStaticSocketServer.vcxproj  log4cxxStaticSocketServer.vcxproj.filters
nugetShortSocketClient/: packages.config  shortSocketClient.vcxproj  shortSocketClient.vcxproj.filters
nugetShortSocketServer/: shortSocketServer.vcxproj  shortSocketServer.vcxproj.filters
python/: client.py  msgpackLogRecord.py  socketHandlers.py
pythonLogging/: pythonLogging.sln
pythonLogging/client/: client.py  client.pyproj  socketHandlers.py
pythonLogging/client/LoggingEvent/: ByteSocketHandler.py  DefaultSocketHandler.py  JsonSocketHandler.py  MsgpackSocketHandler.py  __init__.py
pythonLogging/server/: server.py  server.pyproj
pythonLogging/server/LogRecord/: BytesLogRecord.py  BytesLogRecordStreamHandler.py  DefaultLogRecord.py  DefaultLogRecordStreamHandler.py  JsonLogRecord.py  JsonLogRecordStreamHandler.py  MsgpackLogRecord.py  MsgpackLogRecordStreamHandler.py  __init__.py
shortSocketClient/: shortSocketClient.conf  shortSocketClient.cpp  shortSocketClient.vcxproj  shortSocketClient.vcxproj.filters
shortSocketServer/: shortSocketServer.conf  shortSocketServer.cpp  shortSocketServer.vcxproj  shortSocketServer.vcxproj.filters
test/: LoadLogRecord.sln  LoadLoggingEvnet.sln  SaveLoggingEvent.sln
test/LoadLogRecord/: BytesObjectLoader.cpp  BytesObjectLoader.h  LoadLogRecord.cpp  LoadLogRecord.vcxproj  LoadLogRecord.vcxproj.filters  LoggingEventEx.cpp  LoggingEvnetEx.h  MsgpackObjectLoader.cpp  MsgpackObjectLoader.h
test/LoadLoggingEvnet/: LoadLoggingEvnet.cpp  LoadLoggingEvnet.vcxproj  LoadLoggingEvnet.vcxproj.filters
test/SaveLoggingEvent/: DefaultObjectSaver.cpp  DefaultObjectSaver.h  SaveLoggingEvent.cpp  SaveLoggingEvent.vcxproj  SaveLoggingEvent.vcxproj.filters
